force-app/main/default/objects/p2s_base1__OpportunityStageSetting__c/p2s_base1__OpportunityStageSetting__c.object-meta.xml
<CustomObject>
    <label>Opportunity Stage Setting</label>
    <nameField>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Stage Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>