force-app/main/default/objects/p2s_base1__OpportunityStageSetting__c/fields/p2s_base1__Active__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activate this Opportunity Stage Setting</description>
    <inlineHelpText>Activate this Opportunity Stage Setting</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>