force-app/main/default/objects/p2s_base1__OpportunityStageSetting__c/fields/p2s_base1__LifecycleStage__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__LifecycleStage__c</fullName>
    <label>Opportunity Journey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>p2s_base1__LifecycleStage</valueSetName>
    </valueSet>
</CustomField>